# feedreaders

./: Cargo.toml  README.md  build.sh  feedreader.conf  install.sh
.github/workflows/: ci.yml
feeds/: Cargo.toml
feeds/src/: cgi.rs  formfields.rs  main.rs  pagegen.rs  pagegen_template.js  query.rs  wakeup.rs
feedscfg/: Cargo.toml
feedscfg/src/: lib.rs
feedscli/: Cargo.toml
feedscli/src/: command.rs  main.rs
feedscli/src/command/: getkv.rs  list.rs  seen.rs
feedsd/: Cargo.toml  feedsd.service
feedsd/src/: main.rs  refresh.rs  systemd.rs
feedsdb/: Cargo.toml
feedsdb/src/: error.rs  lib.rs
resources/: style.css
