# -*- coding: utf-8 -*-

[workspace]
members = [
    "feeds",
    "feedscfg",
    "feedscli",
    "feedsd",
    "feedsdb",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.93"
license = "GPL-2.0-or-later"
authors = [ "Michael Büsch <m@bues.ch>", "Marco Lochen" ]
homepage = "https://bues.ch/"
repository = "https://github.com/mbuesch/feedreaders"
readme = "README.md"
categories = [ "network-programming", "text-processing", "visualization", "web-programming" ]
keywords = [ "feed-reader", "rss", "atom" ]

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", default-features = false }
console-subscriber = "0.5"
env_logger = "0.11"
feed-rs = "2"
hex = "0.4"
html-escape = "0.2"
itertools = "0.14"
log = "0.4"
multer = "3"
nix = { version = "0.30", default-features = false }
querystrong = "0.3"
rand = "0.9"
regex = "1"
reqwest = { version = "0.13", default-features = false }
rusqlite = "0.38"
sd-notify = "0.4"
sha2 = "0.10"
tokio = "1"
toml = "0.9"

feedscfg = { version = "1", path = "./feedscfg" }
feedsdb = { version = "1", path = "./feedsdb" }

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = true
codegen-units = 1

# vim: ts=4 sw=4 expandtab
