# -*- coding: utf-8 -*-

[package]
name = "feedscfg"
description = "feedreader-rs configuration library"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

# vim: ts=4 sw=4 expandtab
