# -*- coding: utf-8 -*-

[package]
name = "feedsd"
description = "feedreader-rs update daemon"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = [ "std", "help", "usage", "error-context", "derive" ] }
console-subscriber = { workspace = true }
env_logger = { workspace = true }
feed-rs = { workspace = true }
feedscfg = { workspace = true }
feedsdb = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = [ "http2", "rustls-tls", "gzip", "brotli", "zstd", "deflate" ] }
sd-notify = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal", "sync" ] }

# vim: ts=4 sw=4 expandtab
